--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,7 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/bpojobspot?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:postgresql://db.gajafnyqyryuciegtfjt.supabase.co:5432/postgres?user=postgres&password=Creator@007db
+spring.datasource.username=postgres
+spring.datasource.password=Creator@007db
 
-#Hibernate/JPA properties (optional but recommended)
-spring.jpa.hibernate.ddl-auto=update 
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-
-
