--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
-spring.datasource.url=jdbc:postgresql://db.gajafnyqyryuciegtfjt.supabase.co:5432/postgres?user=postgres&password=Creator@007db
-spring.datasource.username=postgres
-spring.datasource.password=Creator@007db
+server.port=${PORT:8080}
+
+
+#spring.datasource.url=
+#spring.datasource.username=postgres
+#spring.datasource.password=Creator@007db
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
