--- a/pom.xml
+++ b/pom.xml
@@ -55,8 +55,10 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope><!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+			<scope>test</scope>
 		</dependency>
+
+
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-test</artifactId>
@@ -66,8 +68,9 @@
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
-			<version>42.7.7</version>
+			<scope>runtime</scope>
 		</dependency>
+
 	</dependencies>
 
 	<build>
