--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,12 @@
-server.port=${PORT:8080}
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# PostgreSQL (Supabase)
+spring.datasource.url=jdbc:postgresql://db.gajafnyqyryuciegtfjt.supabase.co:5432/postgres?user=postgres&password=Creator@007db
+spring.datasource.username=postgres
+spring.datasource.password=Creator@007db
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA / Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
