--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,9 @@
 
 
 # PostgreSQL (Supabase)
-spring.datasource.url=jdbc:postgresql://db.gajafnyqyryuciegtfjt.supabase.co:5432/postgres?user=postgres&password=Creator@007db
-spring.datasource.username=postgres
-spring.datasource.password=Creator@007db
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
 # JPA / Hibernate
 spring.jpa.hibernate.ddl-auto=update
